// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cell Element Filled 1`] = `
<button
  aria-label={1}
  className="cell
      
      
      
       "
  data-test={1}
  onClick={[Function]}
>
  1
</button>
`;

exports[`Storyshots Cell Empty 1`] = `
<button
  aria-label={1}
  className="cell
      
      
      
       "
  data-test={1}
  onClick={[Function]}
/>
`;

exports[`Storyshots Grid Empty 1`] = `
<div
  className="MuiGrid-root"
  data-test="grid"
>
  <div
    className="grid-row"
    data-test="row-0"
  >
    <button
      aria-label="cell-0/0"
      className="cell
      box-border-top
      box-border-left
      
       "
      data-test="cell-0/0"
      onClick={[Function]}
    />
    <button
      aria-label="cell-0/1"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-0/1"
      onClick={[Function]}
    />
    <button
      aria-label="cell-0/2"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-0/2"
      onClick={[Function]}
    />
    <button
      aria-label="cell-0/3"
      className="cell
      box-border-top
      box-border-left
      
       "
      data-test="cell-0/3"
      onClick={[Function]}
    />
    <button
      aria-label="cell-0/4"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-0/4"
      onClick={[Function]}
    />
    <button
      aria-label="cell-0/5"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-0/5"
      onClick={[Function]}
    />
    <button
      aria-label="cell-0/6"
      className="cell
      box-border-top
      box-border-left
      
       "
      data-test="cell-0/6"
      onClick={[Function]}
    />
    <button
      aria-label="cell-0/7"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-0/7"
      onClick={[Function]}
    />
    <button
      aria-label="cell-0/8"
      className="cell
      box-border-top
      
      
      box-border-right "
      data-test="cell-0/8"
      onClick={[Function]}
    />
  </div>
  <div
    className="grid-row"
    data-test="row-1"
  >
    <button
      aria-label="cell-1/0"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-1/0"
      onClick={[Function]}
    />
    <button
      aria-label="cell-1/1"
      className="cell
      
      
      
       "
      data-test="cell-1/1"
      onClick={[Function]}
    />
    <button
      aria-label="cell-1/2"
      className="cell
      
      
      
       "
      data-test="cell-1/2"
      onClick={[Function]}
    />
    <button
      aria-label="cell-1/3"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-1/3"
      onClick={[Function]}
    />
    <button
      aria-label="cell-1/4"
      className="cell
      
      
      
       "
      data-test="cell-1/4"
      onClick={[Function]}
    />
    <button
      aria-label="cell-1/5"
      className="cell
      
      
      
       "
      data-test="cell-1/5"
      onClick={[Function]}
    />
    <button
      aria-label="cell-1/6"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-1/6"
      onClick={[Function]}
    />
    <button
      aria-label="cell-1/7"
      className="cell
      
      
      
       "
      data-test="cell-1/7"
      onClick={[Function]}
    />
    <button
      aria-label="cell-1/8"
      className="cell
      
      
      
      box-border-right "
      data-test="cell-1/8"
      onClick={[Function]}
    />
  </div>
  <div
    className="grid-row"
    data-test="row-2"
  >
    <button
      aria-label="cell-2/0"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-2/0"
      onClick={[Function]}
    />
    <button
      aria-label="cell-2/1"
      className="cell
      
      
      
       "
      data-test="cell-2/1"
      onClick={[Function]}
    />
    <button
      aria-label="cell-2/2"
      className="cell
      
      
      
       "
      data-test="cell-2/2"
      onClick={[Function]}
    />
    <button
      aria-label="cell-2/3"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-2/3"
      onClick={[Function]}
    />
    <button
      aria-label="cell-2/4"
      className="cell
      
      
      
       "
      data-test="cell-2/4"
      onClick={[Function]}
    />
    <button
      aria-label="cell-2/5"
      className="cell
      
      
      
       "
      data-test="cell-2/5"
      onClick={[Function]}
    />
    <button
      aria-label="cell-2/6"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-2/6"
      onClick={[Function]}
    />
    <button
      aria-label="cell-2/7"
      className="cell
      
      
      
       "
      data-test="cell-2/7"
      onClick={[Function]}
    />
    <button
      aria-label="cell-2/8"
      className="cell
      
      
      
      box-border-right "
      data-test="cell-2/8"
      onClick={[Function]}
    />
  </div>
  <div
    className="grid-row"
    data-test="row-3"
  >
    <button
      aria-label="cell-3/0"
      className="cell
      box-border-top
      box-border-left
      
       "
      data-test="cell-3/0"
      onClick={[Function]}
    />
    <button
      aria-label="cell-3/1"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-3/1"
      onClick={[Function]}
    />
    <button
      aria-label="cell-3/2"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-3/2"
      onClick={[Function]}
    />
    <button
      aria-label="cell-3/3"
      className="cell
      box-border-top
      box-border-left
      
       "
      data-test="cell-3/3"
      onClick={[Function]}
    />
    <button
      aria-label="cell-3/4"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-3/4"
      onClick={[Function]}
    />
    <button
      aria-label="cell-3/5"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-3/5"
      onClick={[Function]}
    />
    <button
      aria-label="cell-3/6"
      className="cell
      box-border-top
      box-border-left
      
       "
      data-test="cell-3/6"
      onClick={[Function]}
    />
    <button
      aria-label="cell-3/7"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-3/7"
      onClick={[Function]}
    />
    <button
      aria-label="cell-3/8"
      className="cell
      box-border-top
      
      
      box-border-right "
      data-test="cell-3/8"
      onClick={[Function]}
    />
  </div>
  <div
    className="grid-row"
    data-test="row-4"
  >
    <button
      aria-label="cell-4/0"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-4/0"
      onClick={[Function]}
    />
    <button
      aria-label="cell-4/1"
      className="cell
      
      
      
       "
      data-test="cell-4/1"
      onClick={[Function]}
    />
    <button
      aria-label="cell-4/2"
      className="cell
      
      
      
       "
      data-test="cell-4/2"
      onClick={[Function]}
    />
    <button
      aria-label="cell-4/3"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-4/3"
      onClick={[Function]}
    />
    <button
      aria-label="cell-4/4"
      className="cell
      
      
      
       "
      data-test="cell-4/4"
      onClick={[Function]}
    />
    <button
      aria-label="cell-4/5"
      className="cell
      
      
      
       "
      data-test="cell-4/5"
      onClick={[Function]}
    />
    <button
      aria-label="cell-4/6"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-4/6"
      onClick={[Function]}
    />
    <button
      aria-label="cell-4/7"
      className="cell
      
      
      
       "
      data-test="cell-4/7"
      onClick={[Function]}
    />
    <button
      aria-label="cell-4/8"
      className="cell
      
      
      
      box-border-right "
      data-test="cell-4/8"
      onClick={[Function]}
    />
  </div>
  <div
    className="grid-row"
    data-test="row-5"
  >
    <button
      aria-label="cell-5/0"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-5/0"
      onClick={[Function]}
    />
    <button
      aria-label="cell-5/1"
      className="cell
      
      
      
       "
      data-test="cell-5/1"
      onClick={[Function]}
    />
    <button
      aria-label="cell-5/2"
      className="cell
      
      
      
       "
      data-test="cell-5/2"
      onClick={[Function]}
    />
    <button
      aria-label="cell-5/3"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-5/3"
      onClick={[Function]}
    />
    <button
      aria-label="cell-5/4"
      className="cell
      
      
      
       "
      data-test="cell-5/4"
      onClick={[Function]}
    />
    <button
      aria-label="cell-5/5"
      className="cell
      
      
      
       "
      data-test="cell-5/5"
      onClick={[Function]}
    />
    <button
      aria-label="cell-5/6"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-5/6"
      onClick={[Function]}
    />
    <button
      aria-label="cell-5/7"
      className="cell
      
      
      
       "
      data-test="cell-5/7"
      onClick={[Function]}
    />
    <button
      aria-label="cell-5/8"
      className="cell
      
      
      
      box-border-right "
      data-test="cell-5/8"
      onClick={[Function]}
    />
  </div>
  <div
    className="grid-row"
    data-test="row-6"
  >
    <button
      aria-label="cell-6/0"
      className="cell
      box-border-top
      box-border-left
      
       "
      data-test="cell-6/0"
      onClick={[Function]}
    />
    <button
      aria-label="cell-6/1"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-6/1"
      onClick={[Function]}
    />
    <button
      aria-label="cell-6/2"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-6/2"
      onClick={[Function]}
    />
    <button
      aria-label="cell-6/3"
      className="cell
      box-border-top
      box-border-left
      
       "
      data-test="cell-6/3"
      onClick={[Function]}
    />
    <button
      aria-label="cell-6/4"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-6/4"
      onClick={[Function]}
    />
    <button
      aria-label="cell-6/5"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-6/5"
      onClick={[Function]}
    />
    <button
      aria-label="cell-6/6"
      className="cell
      box-border-top
      box-border-left
      
       "
      data-test="cell-6/6"
      onClick={[Function]}
    />
    <button
      aria-label="cell-6/7"
      className="cell
      box-border-top
      
      
       "
      data-test="cell-6/7"
      onClick={[Function]}
    />
    <button
      aria-label="cell-6/8"
      className="cell
      box-border-top
      
      
      box-border-right "
      data-test="cell-6/8"
      onClick={[Function]}
    />
  </div>
  <div
    className="grid-row"
    data-test="row-7"
  >
    <button
      aria-label="cell-7/0"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-7/0"
      onClick={[Function]}
    />
    <button
      aria-label="cell-7/1"
      className="cell
      
      
      
       "
      data-test="cell-7/1"
      onClick={[Function]}
    />
    <button
      aria-label="cell-7/2"
      className="cell
      
      
      
       "
      data-test="cell-7/2"
      onClick={[Function]}
    />
    <button
      aria-label="cell-7/3"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-7/3"
      onClick={[Function]}
    />
    <button
      aria-label="cell-7/4"
      className="cell
      
      
      
       "
      data-test="cell-7/4"
      onClick={[Function]}
    />
    <button
      aria-label="cell-7/5"
      className="cell
      
      
      
       "
      data-test="cell-7/5"
      onClick={[Function]}
    />
    <button
      aria-label="cell-7/6"
      className="cell
      
      box-border-left
      
       "
      data-test="cell-7/6"
      onClick={[Function]}
    />
    <button
      aria-label="cell-7/7"
      className="cell
      
      
      
       "
      data-test="cell-7/7"
      onClick={[Function]}
    />
    <button
      aria-label="cell-7/8"
      className="cell
      
      
      
      box-border-right "
      data-test="cell-7/8"
      onClick={[Function]}
    />
  </div>
  <div
    className="grid-row"
    data-test="row-8"
  >
    <button
      aria-label="cell-8/0"
      className="cell
      
      box-border-left
      box-border-bottom
       "
      data-test="cell-8/0"
      onClick={[Function]}
    />
    <button
      aria-label="cell-8/1"
      className="cell
      
      
      box-border-bottom
       "
      data-test="cell-8/1"
      onClick={[Function]}
    />
    <button
      aria-label="cell-8/2"
      className="cell
      
      
      box-border-bottom
       "
      data-test="cell-8/2"
      onClick={[Function]}
    />
    <button
      aria-label="cell-8/3"
      className="cell
      
      box-border-left
      box-border-bottom
       "
      data-test="cell-8/3"
      onClick={[Function]}
    />
    <button
      aria-label="cell-8/4"
      className="cell
      
      
      box-border-bottom
       "
      data-test="cell-8/4"
      onClick={[Function]}
    />
    <button
      aria-label="cell-8/5"
      className="cell
      
      
      box-border-bottom
       "
      data-test="cell-8/5"
      onClick={[Function]}
    />
    <button
      aria-label="cell-8/6"
      className="cell
      
      box-border-left
      box-border-bottom
       "
      data-test="cell-8/6"
      onClick={[Function]}
    />
    <button
      aria-label="cell-8/7"
      className="cell
      
      
      box-border-bottom
       "
      data-test="cell-8/7"
      onClick={[Function]}
    />
    <button
      aria-label="cell-8/8"
      className="cell
      
      
      box-border-bottom
      box-border-right "
      data-test="cell-8/8"
      onClick={[Function]}
    />
  </div>
</div>
`;
